--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -6,7 +6,7 @@ DATASET:
   DATASET: Xray
   ROOT: './data/images'
   TRAINSET: './data/train.csv'
-  TESTSET: './data/test.csv'
+  TESTSET: './data/valid.csv'
   FLIP: false
   SCALE_FACTOR: 0.25
   ROT_FACTOR: 30
@@ -67,7 +67,7 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 2
+  END_EPOCH: 1
   RESUME: true
   OPTIMIZER: 'adam'
   LR: 0.0001
