--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -4,12 +4,12 @@ PRINT_FREQ: 50
 
 DATASET:
   DATASET: Xray
-  ROOT: './data/images'
-  TRAINSET: './data/train.csv'
-  TESTSET: './data/valid.csv'
+  ROOT: '/public/home/zhaojh1/git_main/HRNet/data/images/'
+  TRAINSET: '/public/home/zhaojh1/git_main/HRNet/data/train.csv'
+  TESTSET: '/public/home/zhaojh1/git_main/HRNet/data/test.csv'
   FLIP: false
-  SCALE_FACTOR: 0.25
-  ROT_FACTOR: 30
+  SCALE_FACTOR: 1.
+  ROT_FACTOR: 0
 MODEL:
   NAME: 'hrnet'
   NUM_JOINTS: 96
@@ -64,7 +64,7 @@ MODEL:
         - 144
       FUSE_METHOD: SUM
 TRAIN:
-  BATCH_SIZE_PER_GPU: 2
+  BATCH_SIZE_PER_GPU: 8
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 60
@@ -76,4 +76,4 @@ TRAIN:
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 2
+  BATCH_SIZE_PER_GPU: 8
