--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -1,5 +1,5 @@
-GPUS: (0, 1, 2, 3)
-WORKERS: 8
+GPUS: (0, )
+WORKERS: 2
 PRINT_FREQ: 50
 
 DATASET:
@@ -67,12 +67,12 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 60
+  END_EPOCH: 30
   RESUME: false
   OPTIMIZER: 'adam'
   LR: 0.0001
   WD: 0.0
-  LR_STEP: [30, 50]
+  LR_STEP: [15, 25]
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
