--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -1,5 +1,5 @@
-GPUS: (0, 1)
-WORKERS: 4
+GPUS: (0, 1, 2, 3)
+WORKERS: 24
 PRINT_FREQ: 50
 
 DATASET:
@@ -14,7 +14,7 @@ MODEL:
   NAME: 'hrnet'
   NUM_JOINTS: 6
   INIT_WEIGHTS: true
-  PRETRAINED: '/public/home/zhaojh1/git_main/HRNet/hrnetv2_pretrained/hrnetv2_w18_imagenet_pretrained.pth'
+  PRETRAINED: '/public/home/zhaojh1/git_main/test-32/pose_hrnet_w32_384x288.pth'
   SIGMA: 1.0
   IMAGE_SIZE:
     - 1024
@@ -32,8 +32,8 @@ MODEL:
         - 4
         - 4
       NUM_CHANNELS:
-        - 18
-        - 36
+        - 32
+        - 64
       FUSE_METHOD: SUM
     STAGE3:
       NUM_MODULES: 4
@@ -44,9 +44,9 @@ MODEL:
         - 4
         - 4
       NUM_CHANNELS:
-        - 18
-        - 36
-        - 72
+        - 32
+        - 64
+        - 128
       FUSE_METHOD: SUM
     STAGE4:
       NUM_MODULES: 3
@@ -58,21 +58,21 @@ MODEL:
         - 4
         - 4
       NUM_CHANNELS:
-        - 18
-        - 36
-        - 72
-        - 144
+        - 32
+        - 64
+        - 128
+        - 256
       FUSE_METHOD: SUM
 TRAIN:
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 30
+  END_EPOCH: 450
   RESUME: false
   OPTIMIZER: 'adam'
-  LR: 0.0001
+  LR: 0.001
   WD: 0.0
-  LR_STEP: [15, 25]
+  LR_STEP: [400, 440]
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
