--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -64,15 +64,16 @@ MODEL:
         - 256
       FUSE_METHOD: SUM
 TRAIN:
+  KFOLD_NUM: 15
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 450
+  END_EPOCH: 500
   RESUME: false
   OPTIMIZER: 'adam'
   LR: 0.001
   WD: 0.0
-  LR_STEP: [400, 440]
+  LR_STEP: [460, 490]
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
