--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -1,5 +1,5 @@
-GPUS: (0, 1, 2, 3)
-WORKERS: 24
+GPUS: (0, 1)
+WORKERS: 8
 PRINT_FREQ: 50
 
 DATASET:
@@ -64,17 +64,17 @@ MODEL:
         - 256
       FUSE_METHOD: SUM
 TRAIN:
-  KFOLD_NUM: 15
+  KFOLD_NUM: 10
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 500
+  END_EPOCH: 400
   RESUME: false
   OPTIMIZER: 'adam'
   LR: 0.001
   WD: 0.0
-  LR_STEP: [460, 490]
+  LR_STEP: [360, 390]
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 2
+  BATCH_SIZE_PER_GPU: 8
