--- a/experiments/hrnet_w18.yaml
+++ b/experiments/hrnet_w18.yaml
@@ -1,5 +1,5 @@
-GPUS: (0, 1)
-WORKERS: 4
+GPUS: (0, 1, 2, 3)
+WORKERS: 16
 PRINT_FREQ: 50
 
 DATASET:
@@ -68,12 +68,12 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 400
+  END_EPOCH: 500
   RESUME: false
   OPTIMIZER: 'adam'
   LR: 0.001
   WD: 0.0
-  LR_STEP: [360, 390]
+  LR_STEP: [460, 490]
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
