--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ data/
 hrnetv2_pretrained/
 output/
 log/
+image/
 *.swp
 
 *.out
@@ -51,5 +52,6 @@ log/
 
 *.png
 *.jpg
+*.csv
 visual/
 visual_data
